<resources>
    <string name="app_name">Мой магазин</string>
    <string name="date">Дата</string>
    <string name="sale">Продажа</string>
    <string name="plus">Приход</string>
    <string name="minus">Списание</string>
    <string name="reports">Отчеты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_product">Выберите товар</string>
    <string name="add_product">Добавить товар</string>
    <string name="amount">Введите количество</string>
    <string name="itogo">Итого</string>
    <string name="payment">Оплата</string>
    <string name="cash">Наличные</string>
    <string name="card">Карта</string>
    <string name="period_report">Отчет за день</string>
    <string name="all_period_report">Отчет за период</string>
    <string name="remains">Остатки</string>
    <string name="search_date">Выберите дату</string>
    <string name="total_day_cash">Итого наличными</string>
    <string name="total_day_card">Итого на карту</string>
    <string name="total_day">Выручка за день</string>
    <string name="total_period">Выручка за период</string>
    <string name="price">Цена</string>
    <string name="cancel">Отмена</string>
    <string name="add_position">Добавить позицию</string>
    <string name="add_name">Введите название товара</string>
    <string name="add_price">Введите цену товара</string>
    <string name="add_amount">Введите количество товара</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="add_minus">Приходы, списания</string>
    <string name="dolg">В долг</string>
    <string name="dolgi">Долги</string>
    <string name="skidki">Скидок</string>
    <string name="total_dolgi">Всего долгов</string>
    <string name="btn_otdali">Отдали</string>
    <string name="btn_otdali_cahs">Нал</string>
    <string name="btn_otdali_report">Долги отдали</string>
    <string name="edit_text_dolg_summa">Введите сумму долга</string>
    <string name="pass_ok">Да</string>
    <string name="pass">Введите пароль</string>
    <string name="edit_reports">Редактировать отчеты</string>


</resources>