<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="32sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/dark_violet"
            android:layout_marginVertical="20dp"
            />

        <Button
            android:id="@+id/sale"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/sale"
            android:textSize="32sp"
            android:layout_marginVertical="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/btn_background_design"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/plus"
            android:textSize="32sp"
            android:layout_marginVertical="20dp"
            style="@style/ButtonBordo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/btn_bordo"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/minus"
            android:textSize="32sp"
            android:layout_marginVertical="20dp"
            style="@style/ButtonPink"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/btn_pink"/>

        <Button
            android:id="@+id/reports"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/reports"
            android:textSize="32sp"
            style="@style/ButtonPeach"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/peach"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/btn_pech"/>
    </LinearLayout>
</RelativeLayout>