<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/howMuch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/item_background_design"
        android:ems="10"
        android:hint="@string/edit_text_dolg_summa"
        android:inputType="numberDecimal"
        android:paddingHorizontal="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/howMuch"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp">

        <Button
            android:id="@+id/btn_dolg_cancel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/btn_background_design"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_dolg_minus_card"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card"
            android:textSize="15sp"
            android:textStyle="bold"
            style="@style/ButtonPeach"
            android:background="@drawable/btn_pech"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_dolg_minus_cash"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            style="@style/ButtonBordo"
            android:background="@drawable/btn_bordo"
            android:textColor="@color/white"
            android:text="@string/btn_otdali_cahs" />


    </LinearLayout>

</RelativeLayout>