<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalePage"
    android:padding="10dp">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_from_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/add_product"
            android:textSize="20sp"
            android:background="@drawable/btn_background_design"
            android:layout_below="@+id/first"/>

        <TextView
            android:id="@+id/product_name_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sale"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btn_add_product"/>


        <LinearLayout
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:layout_below="@+id/product_name_minus">

            <EditText
                android:id="@+id/amount_minus"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:layout_gravity="center_vertical"
                android:background="@drawable/item_background_design"
                android:paddingHorizontal="8dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btn_minus_amount"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="Ок"
                android:textSize="20sp"
                style="@style/ButtonPink"
                android:background="@drawable/btn_pink"/>
        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/minus_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edit_text"
        android:layout_above="@+id/last2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/last2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_above="@+id/last">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/itogo"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/total_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/itogo"
                android:textAlignment="textEnd"
                android:textSize="28sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                style="@style/ButtonBordo"
                android:text="@string/minus"
                android:textSize="20sp"
                android:background="@drawable/btn_bordo"/>

        </LinearLayout>

</RelativeLayout>