<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeriodReportActivity">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_from_all_period"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/back"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:text="С"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/start_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:text="по"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/end_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_all_report_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/first"
            android:layout_above="@+id/linearLayout_dolg"/>

        <LinearLayout
            android:id="@+id/linearLayout_dolg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_above="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dolgi"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_dolgi_summa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/date"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"
            android:layout_above="@+id/linearLayout2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_day_cash"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_cash_summa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/date"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"
            android:layout_above="@+id/last">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_day_card"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_card_summa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/date"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_period"
                android:textColor="@color/violet"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_day_summa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="end"
                android:text="@string/date"
                android:textColor="@color/violet"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
</RelativeLayout>