<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeriodReportActivity">

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_from_add_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/back"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/start_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/date"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_minus_report_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/date_layout"
            android:layout_above="@+id/plus_layout"/>

        <LinearLayout
            android:id="@+id/plus_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_alignBottom="@+id/minus_layout"
            android:layout_marginBottom="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="@color/violet"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/date"
                android:textColor="@color/violet"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/minus_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="@color/violet"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_minus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/date"
                android:textColor="@color/violet"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

</RelativeLayout>